update on the url fomart

--- a/services.html
+++ b/services.html
@@ -227,7 +227,7 @@ title: "Our Services"
 				<h2 class="text-white mb-0">Neu Technology gives the smart solution for your business</h2>
 			</div>
 			<div class="col-lg-3">
-				<a href="/contact" class="btn btn-primary">get a quote</a>
+				<a href="{{ site.baseurl }}/contact" class="btn btn-primary">get a quote</a>
 			</div>
 		</div>
 	</div>
